LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Account_Plan_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Plan_Status__c</fullName>
    <label>Account Plan Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Pending NSL Approval</fullName>
            </value>
            <value>
                <fullName>NSL Approved</fullName>
            </value>
            <value>
                <fullName>NSL Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>