LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Account_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type__c</fullName>
    <defaultValue>$RecordType.Name</defaultValue>
    <label>Account Record Type</label>
    <length>60</length>
    <type>Text</type>
</CustomField>