LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <label>Client Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Key Client</fullName>
                <label>Key Account</label>
            </value>
            <value>
                <fullName>Client Account</fullName>
                <default>true</default>
                <label>Client Account</label>
            </value>
            <value>
                <fullName>Apex Chambers</fullName>
                <isActive>false</isActive>
                <label>Apex Chambers</label>
            </value>
            <value>
                <fullName>Bilateral Chamber</fullName>
                <isActive>false</isActive>
                <label>Bilateral Chamber</label>
            </value>
            <value>
                <fullName>Existing Client</fullName>
                <isActive>false</isActive>
                <label>Existing Client</label>
            </value>
            <value>
                <fullName>Key Account - CX</fullName>
                <isActive>false</isActive>
                <label>Key Account - CX</label>
            </value>
            <value>
                <fullName>Key Account - GX</fullName>
                <isActive>false</isActive>
                <label>Key Account - GX</label>
            </value>
            <value>
                <fullName>New Client</fullName>
                <isActive>false</isActive>
                <label>New Client</label>
            </value>
            <value>
                <fullName>Non Key Client</fullName>
                <isActive>false</isActive>
                <label>Non Key Client</label>
            </value>
            <value>
                <fullName>Regional &amp; Other Chamber</fullName>
                <isActive>false</isActive>
                <label>Regional &amp; Other Chamber</label>
            </value>
            <value>
                <fullName>Sectoral Chamber</fullName>
                <isActive>false</isActive>
                <label>Sectoral Chamber</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>