LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/AnnualRevenue__c.field-meta.xml
<CustomField>
    <fullName>AnnualRevenue__c</fullName>
    <label>Annual Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>