LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Assigned_to_DS_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Assigned_to_DS_Team_Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned to DS Team Member</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Clients7</relationshipName>
    <type>Lookup</type>
</CustomField>