LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Bill_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will be marked as true when bill to client is converted to client. For internal usage</description>
    <label>Bill to Client</label>
    <type>Checkbox</type>
</CustomField>