LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Business_Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Business_Short_Description__c</fullName>
    <label>Business Short Description</label>
    <type>TextArea</type>
</CustomField>