LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Clients</relationshipLabel>
    <relationshipName>Clients</relationshipName>
    <type>Lookup</type>
</CustomField>