LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/capIQId__c.field-meta.xml
<CustomField>
    <fullName>capIQId__c</fullName>
    <label>capIQId</label>
    <length>24</length>
    <type>Text</type>
</CustomField>