LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Channel_and_Alliance_Type__c.field-meta.xml
<CustomField>
    <fullName>Channel_and_Alliance_Type__c</fullName>
    <label>Channel and Alliance Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Member Firms Leaders</fullName>
            </value>
            <value>
                <fullName>NEDs &amp; ACs</fullName>
            </value>
            <value>
                <fullName>PEVC</fullName>
            </value>
            <value>
                <fullName>BO &amp; family office</fullName>
            </value>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>Law Firm</fullName>
            </value>
            <value>
                <fullName>GCC</fullName>
            </value>
            <value>
                <fullName>Alumni</fullName>
            </value>
            <value>
                <fullName>Academia</fullName>
            </value>
            <value>
                <fullName>Regulators</fullName>
            </value>
            <value>
                <fullName>CIO CDO CISO</fullName>
            </value>
            <value>
                <fullName>CHRO</fullName>
            </value>
            <value>
                <fullName>CFO</fullName>
            </value>
            <value>
                <fullName>CMO</fullName>
            </value>
            <value>
                <fullName>Chambers</fullName>
            </value>
            <value>
                <fullName>Tech Alliances</fullName>
            </value>
            <value>
                <fullName>CA Firms</fullName>
            </value>
            <value>
                <fullName>Specialised Advisory Firms</fullName>
            </value>
            <value>
                <fullName>PMOs</fullName>
            </value>
            <value>
                <fullName>ASSOCHAM</fullName>
            </value>
            <value>
                <fullName>ANZ India Business Chamber</fullName>
            </value>
            <value>
                <fullName>Retailers Association of India</fullName>
            </value>
            <value>
                <fullName>EBG Federation</fullName>
            </value>
            <value>
                <fullName>Mahratta Chamber of Commerce Industries and Agriculture (MCCIA)</fullName>
            </value>
            <value>
                <fullName>FICCI</fullName>
            </value>
            <value>
                <fullName>ICC - Kolkata</fullName>
            </value>
            <value>
                <fullName>AMCHAM</fullName>
            </value>
            <value>
                <fullName>SEPC</fullName>
            </value>
            <value>
                <fullName>Indo-Japan Chamber of Commerce &amp; Industry</fullName>
            </value>
            <value>
                <fullName>INDO-AMERICAN CHAMBER OF COMMERCE Delhi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>