LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Channel_Type__c.field-meta.xml
<CustomField>
    <fullName>Channel_Type__c</fullName>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Audit Client</fullName>
                <label>Channel 1</label>
            </value>
            <value>
                <fullName>Non audit client</fullName>
                <label>Channel 2</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>