LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/CIN_LLPIN_DUO__c.field-meta.xml
<CustomField>
    <fullName>CIN_LLPIN_DUO__c</fullName>
    <label>CIN / LLPIN DUO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>