LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Client_Account_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Client_Account_Sub_Category__c</fullName>
    <label>Client Account Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Young CSL</fullName>
            </value>
            <value>
                <fullName>Client Account</fullName>
            </value>
            <value>
                <fullName>Former Key account</fullName>
                <isActive>false</isActive>
                <label>Former Key account</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>