LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Client_Background__c.field-meta.xml
<CustomField>
    <fullName>Client_Background__c</fullName>
    <label>Client Background</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>