LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Client_Category__c.field-meta.xml
<CustomField>
    <fullName>Client_Category__c</fullName>
    <label>Account Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GX - Platinum</fullName>
            </value>
            <value>
                <fullName>GX - Gold</fullName>
            </value>
            <value>
                <fullName>CX</fullName>
            </value>
            <value>
                <fullName>Key Account</fullName>
                <isActive>false</isActive>
                <label>Key Account</label>
            </value>
            <value>
                <fullName>Non Key Account</fullName>
                <isActive>false</isActive>
                <label>Non Key Account</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>