LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Client_Contact__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Clients</relationshipLabel>
    <relationshipName>Clients</relationshipName>
    <type>Lookup</type>
</CustomField>