LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Client_Location__c.field-meta.xml
<CustomField>
    <fullName>Client_Location__c</fullName>
    <label>Client Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>