LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Client_Name_changed_on_3__c.field-meta.xml
<CustomField>
    <fullName>Client_Name_changed_on_3__c</fullName>
    <label>Client Name changed on (3)</label>
    <type>Date</type>
</CustomField>