LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Client_Name_Changed_On__c.field-meta.xml
<CustomField>
    <fullName>Client_Name_Changed_On__c</fullName>
    <label>Client Name Changed On</label>
    <type>Date</type>
</CustomField>