LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Client_reason_if_inactive__c.field-meta.xml
<CustomField>
    <fullName>Client_reason_if_inactive__c</fullName>
    <label>Client reason (if inactive)</label>
    <length>60</length>
    <type>Text</type>
</CustomField>