LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Client_s_Headquarter__c.field-meta.xml
<CustomField>
    <fullName>Client_s_Headquarter__c</fullName>
    <label>Client&apos;s Headquarter</label>
    <type>Address</type>
</CustomField>