LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Client_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Client_Sub_Category__c</fullName>
    <label>Key Account Sub-Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Client_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GX - Platinum</fullName>
            </value>
            <value>
                <fullName>GX - Gold</fullName>
            </value>
            <value>
                <fullName>CX</fullName>
                <isActive>false</isActive>
                <label>CX</label>
            </value>
            <value>
                <fullName>Client Account</fullName>
                <isActive>false</isActive>
                <label>Client Account</label>
            </value>
            <value>
                <fullName>Formal Key account</fullName>
                <isActive>false</isActive>
                <label>Formal Key account</label>
            </value>
            <value>
                <fullName>Sub Category</fullName>
                <isActive>false</isActive>
                <label>Sub Category</label>
            </value>
            <value>
                <fullName>Young CSL</fullName>
                <isActive>false</isActive>
                <label>Young CSL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>