LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Client_Synced__c.field-meta.xml
<CustomField>
    <fullName>Client_Synced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to check weather client is synced with WCGT</description>
    <label>Client Synced</label>
    <type>Checkbox</type>
</CustomField>