LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/ClientAddress__c.field-meta.xml
<CustomField>
    <fullName>ClientAddress__c</fullName>
    <label>Client Address</label>
    <type>Address</type>
</CustomField>