LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/ClientCompetitors__c.field-meta.xml
<CustomField>
    <fullName>ClientCompetitors__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Competitors</label>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipLabel>Clients</relationshipLabel>
    <relationshipName>Clients</relationshipName>
    <type>Lookup</type>
</CustomField>