LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/ClientGroup__c.field-meta.xml
<CustomField>
    <fullName>ClientGroup__c</fullName>
    <label>Immediate Parent Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>