LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/ClientGroupName__c.field-meta.xml
<CustomField>
    <fullName>ClientGroupName__c</fullName>
    <label>GT Client Group Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>