LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/ClientID__c.field-meta.xml
<CustomField>
    <fullName>ClientID__c</fullName>
    <label>Client ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>