LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/ClientParentID__c.field-meta.xml
<CustomField>
    <fullName>ClientParentID__c</fullName>
    <label>Client Parent ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>