LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Closed_Lost_Amount__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Amount__c</fullName>
    <label>Closed Lost Amount</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>