LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/ClosedWonAmount__c.field-meta.xml
<CustomField>
    <fullName>ClosedWonAmount__c</fullName>
    <label>Closed Won Amount</label>
    <summarizedField>Opportunity.Amount</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.StageName</field>
        <operation>equals</operation>
        <value>Closed Won</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>