LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/CMsPOC__c.field-meta.xml
<CustomField>
    <fullName>CMsPOC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>C&amp;M SPOC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>