LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/CoCSL__c.field-meta.xml
<CustomField>
    <fullName>CoCSL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Co-CSL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>