LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Company_HQ__c.field-meta.xml
<CustomField>
    <fullName>Company_HQ__c</fullName>
    <label>Company HQ</label>
    <type>Address</type>
</CustomField>