LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Company_Phone_No__c.field-meta.xml
<CustomField>
    <fullName>Company_Phone_No__c</fullName>
    <label>Company Phone No.</label>
    <type>Phone</type>
</CustomField>