LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Company_Website__c.field-meta.xml
<CustomField>
    <fullName>Company_Website__c</fullName>
    <label>Company Website</label>
    <type>TextArea</type>
</CustomField>