LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Compounded_Annual_Growth_Rate_CAGR__c.field-meta.xml
<CustomField>
    <fullName>Compounded_Annual_Growth_Rate_CAGR__c</fullName>
    <label>Compounded Annual Growth Rate (CAGR%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>