LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Country_Corridor__c.field-meta.xml
<CustomField>
    <fullName>Country_Corridor__c</fullName>
    <label>Country HQ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Countries</valueSetName>
    </valueSet>
</CustomField>