LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Country_of_Incorporation__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Incorporation__c</fullName>
    <label>Country of Incorporation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>