LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/CreationDate__c.field-meta.xml
<CustomField>
    <fullName>CreationDate__c</fullName>
    <label>Creation Date</label>
    <type>Date</type>
</CustomField>