LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/CSL__c.field-meta.xml
<CustomField>
    <fullName>CSL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CSL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>