LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Custom_Link__c.field-meta.xml
<CustomField>
    <fullName>Custom_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://www.google.co.in/alerts?&amp;q=&quot;&amp;Name, &quot;Generate URL&quot; , &quot;target&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custom Link</label>
    <type>Text</type>
</CustomField>