LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Customer_Experience_Index__c.field-meta.xml
<CustomField>
    <fullName>Customer_Experience_Index__c</fullName>
    <label>Client Experience Index</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>