LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/CxScore__c.field-meta.xml
<CustomField>
    <fullName>CxScore__c</fullName>
    <label>Cx Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>