LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/DateofIncorporation__c.field-meta.xml
<CustomField>
    <fullName>DateofIncorporation__c</fullName>
    <label>Date of Incorporation</label>
    <type>Date</type>
</CustomField>