LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/DaysSinceLastModified__c.field-meta.xml
<CustomField>
    <fullName>DaysSinceLastModified__c</fullName>
    <formula>TODAY()  -   DATEVALUE(LastModifiedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Last Modified</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>