LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <label>Designation</label>
    <type>TextArea</type>
</CustomField>