LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Detractor__c.field-meta.xml
<CustomField>
    <fullName>Detractor__c</fullName>
    <inlineHelpText>Detractor percentage of survey related to this client.</inlineHelpText>
    <label>Detractor</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>