LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/DS_Team_Approval_Rejection_Remarks__c.field-meta.xml
<CustomField>
    <fullName>DS_Team_Approval_Rejection_Remarks__c</fullName>
    <label>DS Team Approval / Rejection Remarks</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>