LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/DS_Team_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>DS_Team_Approval_Status__c</fullName>
    <label>DS Team Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending with DS</fullName>
            </value>
            <value>
                <fullName>DS Approved</fullName>
            </value>
            <value>
                <fullName>DS Rejected</fullName>
            </value>
            <value>
                <fullName>DS Rework required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>