LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/DS_Team_Approved_RejectedBy__c.field-meta.xml
<CustomField>
    <fullName>DS_Team_Approved_RejectedBy__c</fullName>
    <label>DS Team Approved RejectedBy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>