LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/DUOAddress__c.field-meta.xml
<CustomField>
    <fullName>DUOAddress__c</fullName>
    <label>DUO Address</label>
    <type>Address</type>
</CustomField>