LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/DUOLocation__c.field-meta.xml
<CustomField>
    <fullName>DUOLocation__c</fullName>
    <label>DUO Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>