LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/Earnings_Before_Interest_and_Taxes_EBIT__c.field-meta.xml
<CustomField>
    <fullName>Earnings_Before_Interest_and_Taxes_EBIT__c</fullName>
    <label>EBIT</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>