LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/EBITDA__c.field-meta.xml
<CustomField>
    <fullName>EBITDA__c</fullName>
    <description>Earnings Before Interest, Tax, Depreciation &amp; Amortization (EBITDA)</description>
    <label>EBITDA</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>