LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/EinsteinClientTier__c.field-meta.xml
<CustomField>
    <fullName>EinsteinClientTier__c</fullName>
    <label>Einstein Client Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>