LinKreta_POC_Repository/force-app/main/default/objects/Account/fields/EnquiryDescription__c.field-meta.xml
<CustomField>
    <fullName>EnquiryDescription__c</fullName>
    <label>Enquiry Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>